# object_mapper

./: README.md  object_mapper.py  pyproject.toml
object_mapper/: data_genration.py  data_vizulization.py
